--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -19,3 +19,6 @@
 	added = yellow
 	changed = green
 	untracked = cyan
+[alias]
+        lol = log --graph --decorate --pretty=oneline --abbrev-commit
+        lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
