--- a/bash/.inputrc
+++ b/bash/.inputrc
@@ -10,6 +10,20 @@
 "\e[B": history-search-forward
 "\e[C": forward-char
 "\e[D": backward-char
-
+ 	
+# Make Tab autocomplete regardless of filename case
+set completion-ignore-case on
+# List all matches in case multiple possible completions are possible
 set show-all-if-ambiguous on
+
+# Immediately add a trailing slash when autocompleting symlinks to directories
+set mark-symlinked-directories on
+
+# Show extra file information when completing, like `ls -F` does
+set visible-stats on
+
+# Allow UTF-8 input and output, instead of showing stuff like $'\0123\0456'
+set input-meta on
+set output-meta on
+set convert-meta off
 set completion-ignore-case on 
