--- a/bash/.inputrc
+++ b/bash/.inputrc
@@ -16,8 +16,8 @@
 "\e[5C": forward-word
 "\e\e[C": forward-word
 
-"\e[B": history-search-forward 
-"\e[A": history-search-backward
+"\e[1;B": history-search-forward 
+"\e[1;A": history-search-backward
 
 # Make Tab autocomplete regardless of filename case
 set completion-ignore-case on
