--- a/bash/.inputrc
+++ b/bash/.inputrc
@@ -37,5 +37,9 @@ set output-meta on
 set convert-meta off
 set completion-ignore-case on
 
+# Vim Bindings
+set editing-mode vi
+set keymap vi-command
+
 # Neither sound a beep nor flash the screen when trying to ring the bell.
 set bell-style none
