--- a/bash/.inputrc
+++ b/bash/.inputrc
@@ -1,24 +1,3 @@
-"\e[1~": beginning-of-line
-"\e[4~": end-of-line
-
-"\e[C": forward-char
-"\e[D": backward-char
-"\e[3~": delete-char
-
-"\e[2~": quoted-insert
-
-"\e[1;5D": backward-word
-"\e[1;3D": backward-word
-"\e[5D": backward-word
-"\e\e[D": backward-word
-"\e[1;5C": forward-word
-"\e[1;3C": forward-word
-"\e[5C": forward-word
-"\e\e[C": forward-word
-
-"\e[1;B": history-search-forward 
-"\e[1;A": history-search-backward
-
 # Make Tab autocomplete regardless of filename case
 set completion-ignore-case on
 
@@ -31,15 +10,25 @@ set mark-symlinked-directories on
 # Show extra file information when completing, like `ls -F` does
 set visible-stats on
 
+# Do not autocomplete hidden files unless the pattern explicitly begins with a dot
+set match-hidden-files off
+
+# Show all autocomplete results at once
+set page-completions off
+
+# Show extra file information when completing, like `ls -F` does
+set visible-stats on
+
+set skip-completed-text on
+
 # Allow UTF-8 input and output, instead of showing stuff like $'\0123\0456'
 set input-meta on
 set output-meta on
 set convert-meta off
 set completion-ignore-case on
 
-# Vim Bindings
-set editing-mode vi
-set keymap vi-command
-
 # Neither sound a beep nor flash the screen when trying to ring the bell.
 set bell-style none
+
+
+
